--- a/app/src/main/res/layout/activity_vehicle_configuration.xml
+++ b/app/src/main/res/layout/activity_vehicle_configuration.xml
@@ -1,17 +1,56 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.jake.commutilator.VehicleConfiguration"
-    >
+    android:orientation="vertical">
 
+    <TextView
+        android:text="Year:"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/vehicle_year_selection"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp" />
-</RelativeLayout>
+
+        />
+    <TextView
+        android:text="Make:"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+    <Spinner
+        android:layout_marginTop="10dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/vehicle_make_selection"
+
+         />
+    <TextView
+        android:text="Model:"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <Spinner
+        android:layout_marginTop="10dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/vehicle_model_selection"
+
+        />
+
+    <TextView
+        android:text="Model Option:"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+    <Spinner
+        android:layout_marginTop="10dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/vehicle_modeloption_selection"
+
+        />
+</LinearLayout>
