--- a/app/src/main/res/layout/vehicle_spinner_item.xml
+++ b/app/src/main/res/layout/vehicle_spinner_item.xml
@@ -3,4 +3,6 @@
     android:singleLine="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:textSize="18dp"
+    android:layout_margin="5dp"
     android:textColor="@android:color/black" />
