--- a/app/src/main/res/menu/menu_commutilator_home.xml
+++ b/app/src/main/res/menu/menu_commutilator_home.xml
@@ -1,6 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".CommutilatorHome">
-    <item android:id="@+id/action_vehicle_configuration" android:title="Vehicle Configuration"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".CommutilatorHome">
+    <item android:id="@+id/action_vehicle_configuration"
+        android:title="Vehicle Configuration"
+        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_route_map"
+        android:title="Route Map"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
