--- a/app/src/main/res/menu/menu_commutilator_home.xml
+++ b/app/src/main/res/menu/menu_commutilator_home.xml
@@ -8,4 +8,7 @@
     <item android:id="@+id/action_route_map"
         android:title="Route Map"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_trip_history"
+        android:title="Trip History"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
