--- a/app/src/main/res/layout/activity_commutilator_home.xml
+++ b/app/src/main/res/layout/activity_commutilator_home.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +8,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".CommutilatorHome">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="START"
+        android:id="@+id/start_stop_button"/>
 
-</RelativeLayout>
+</LinearLayout>
