--- a/app/src/main/res/layout/activity_commutilator_home.xml
+++ b/app/src/main/res/layout/activity_commutilator_home.xml
@@ -8,6 +8,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".CommutilatorHome">
 
+    <TextView
+        android:id="@+id/current_fuel_price"
+        android:text="Current reg fuel price:"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -15,3 +22,6 @@
         android:id="@+id/start_stop_button"/>
 
 </LinearLayout>
+
+
+</RelativeLayout>
