--- a/app/src/main/res/layout/activity_trip_detail.xml
+++ b/app/src/main/res/layout/activity_trip_detail.xml
@@ -20,9 +20,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/start_time_label"/>
-    <TextView android:id="@+id/duration_text"
+    <TextView android:text="0 minutes"
+        android:id="@+id/duration_text"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_below="@id/start_time_label"
         android:layout_toRightOf="@id/duration_label"/>
 
     <TextView android:text="Distance Travelled: "
@@ -30,9 +32,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/duration_label"/>
-    <TextView android:id="@+id/distance_text"
+    <TextView android:text="0 miles"
+        android:id="@+id/distance_text"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_below="@id/duration_label"
         android:layout_toRightOf="@id/distance_label"/>
 
     <TextView android:text="$ Saved: "
@@ -40,9 +44,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/distance_label"/>
-    <TextView android:id="@+id/amount_saved_text"
+    <TextView android:text="0.00"
+        android:id="@+id/amount_saved_text"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_below="@id/distance_label"
         android:layout_toRightOf="@id/amount_saved_label"/>
 
     <TextView android:text="Gallons Saved: "
@@ -50,9 +56,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/amount_saved_label"/>
-    <TextView android:id="@+id/gallons_saved_text"
+    <TextView android:text="0.0"
+        android:id="@+id/gallons_saved_text"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_below="@id/amount_saved_label"
         android:layout_toRightOf="@id/gallons_saved_label"/>
 
 </RelativeLayout>
