--- a/app/src/main/res/layout/activity_trip_detail.xml
+++ b/app/src/main/res/layout/activity_trip_detail.xml
@@ -66,8 +66,8 @@
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_below="@id/gallons_saved_label"
-        android:id="@+id/activity_route_map"
+        android:layout_height="360dp"
+        android:id="@+id/route_map"
         android:name="com.google.android.gms.maps.SupportMapFragment" />
+
 </RelativeLayout>
