--- a/app/src/main/res/layout/activity_trip_detail.xml
+++ b/app/src/main/res/layout/activity_trip_detail.xml
@@ -63,11 +63,12 @@
         android:layout_below="@id/amount_saved_label"
         android:layout_toRightOf="@id/gallons_saved_label"/>
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <fragment
+        android:layout_below="@id/gallons_saved_text"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="360dp"
         android:id="@+id/route_map"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
+        class="com.google.android.gms.maps.SupportMapFragment"/>
 
 </RelativeLayout>
