--- a/app/src/main/res/layout/activity_vehicle_configuration.xml
+++ b/app/src/main/res/layout/activity_vehicle_configuration.xml
@@ -62,4 +62,11 @@
         android:id="@+id/vehicle_mpg"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        android:layout_below="@id/vehicle_mpg"
+        android:id="@+id/vehicle_config_save_button"/>
 </LinearLayout>
