Look and feel updates

--- a/app/src/main/res/layout/activity_commutilator_home.xml
+++ b/app/src/main/res/layout/activity_commutilator_home.xml
@@ -9,40 +9,30 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".CommutilatorHome">
 
-    <TextView
-        android:text="Fuel price:"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/current_fuel_price"
-        android:text="Current reg fuel price:"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="START"
+        android:text="START TRIP"
         android:id="@+id/start_stop_button"/>
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Configure Vehicle"
-        android:id="@+id/configure_vehicle_button"/>
-
     <TextView
+        android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="You have travelled"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
     <TextView
+        android:gravity="center"
         android:id="@+id/total_distance_travelled"
         android:text=""
+        android:textSize="24dp"
+        android:textColor="@android:color/black"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="and saved"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
@@ -51,22 +41,56 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:gravity="center"
             android:id="@+id/total_gallons_saved"
             android:text=""
-            android:layout_width="wrap_content"
+            android:textSize="24dp"
+            android:layout_weight="1"
+            android:textColor="@android:color/black"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
         <TextView
+            android:gravity="center"
             android:id="@+id/total_money_saved"
             android:text=""
-            android:layout_width="wrap_content"
+            android:textSize="24dp"
+            android:layout_weight="1"
+            android:textColor="@android:color/black"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Trip History"
         android:id="@+id/trip_button" />
+
+    <Button
+        android:layout_marginTop="20dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Configure Vehicle"
+        android:id="@+id/configure_vehicle_button"/>
+
+    <TextView
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:text="Fuel price:"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:textSize="20dp"
+        android:gravity="center"
+        android:textColor="@android:color/black"
+        android:id="@+id/current_fuel_price"
+        android:text="Current reg fuel price:"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+
+
 </LinearLayout>
