--- a/app/src/main/res/layout/trip_item.xml
+++ b/app/src/main/res/layout/trip_item.xml
@@ -1,27 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView android:id="@+id/trip_start_time"
+    <TextView
+        android:layout_margin="5dp"
+        android:id="@+id/trip_start_time"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="16sp"
         android:text="Date"/>
 
-    <TextView android:id="@+id/trip_distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="Distance"
-        android:layout_below="@+id/trip_start_time"/>
+    <LinearLayout
+        android:layout_margin="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView android:id="@+id/trip_amount_saved"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="Dollarz"
-        android:layout_below="@+id/trip_start_time"
-        android:layout_alignParentRight="true"/>
+        <TextView android:id="@+id/trip_distance"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="Distance"/>
 
-</RelativeLayout>
+        <TextView android:id="@+id/trip_gal_saved"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="Gallons"
+            android:layout_alignParentRight="true"/>
+
+        <TextView android:id="@+id/trip_amount_saved"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="Dollarz"
+            android:layout_alignParentRight="true"/>
+    </LinearLayout>
+
+</LinearLayout>
