--- a/app/src/main/res/layout/vehicle_spinner_item.xml
+++ b/app/src/main/res/layout/vehicle_spinner_item.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="18dp"
-    android:layout_margin="5dp"
+    android:padding="10dp"
     android:textColor="@android:color/black" />
