--- a/app/src/main/res/layout/activity_trip_detail.xml
+++ b/app/src/main/res/layout/activity_trip_detail.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -6,76 +6,116 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.jake.commutilator.TripDetail">
 
-    <TextView android:text="Start Time: "
-        android:id="@+id/start_time_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView android:id="@+id/start_time_text"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_toRightOf="@id/start_time_label"/>
 
-    <TextView android:text="Trip Duration: "
-        android:id="@+id/duration_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/start_time_label"/>
-    <TextView android:text="0 minutes"
-        android:id="@+id/duration_text"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_below="@id/start_time_label"
-        android:layout_toRightOf="@id/duration_label"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_margin="3dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView android:text="Start Time: "
 
-    <TextView android:text="Distance Travelled: "
-        android:id="@+id/distance_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/duration_label"/>
-    <TextView android:text="0 miles"
-        android:id="@+id/distance_text"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_below="@id/duration_label"
-        android:layout_toRightOf="@id/distance_label"/>
+            android:id="@+id/start_time_label"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <TextView android:text="1 pm" android:id="@+id/start_time_text"
+            android:textColor="@android:color/black"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            />
 
-    <TextView android:text="$ Saved: "
-        android:id="@+id/amount_saved_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/distance_label"/>
-    <TextView android:text="0.00"
-        android:id="@+id/amount_saved_text"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_below="@id/distance_label"
-        android:layout_toRightOf="@id/amount_saved_label"/>
+    </LinearLayout>
 
-    <TextView android:text="Gallons Saved: "
-        android:id="@+id/gallons_saved_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/amount_saved_label"/>
-    <TextView android:text="0.0"
-        android:id="@+id/gallons_saved_text"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_below="@id/amount_saved_label"
-        android:layout_toRightOf="@id/gallons_saved_label"/>
+    <LinearLayout
+        android:layout_margin="3dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView android:text="Trip Duration: "
+            android:id="@+id/duration_label"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <TextView android:text="0 minutes"
+            android:textColor="@android:color/black"
+            android:id="@+id/duration_text"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_below="@id/start_time_label"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_margin="3dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView android:text="Distance Travelled: "
+            android:id="@+id/distance_label"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+        <TextView android:text="0 miles"
+            android:textColor="@android:color/black"
+            android:id="@+id/distance_text"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_margin="3dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView android:text="$ Saved: "
+            android:id="@+id/amount_saved_label"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <TextView android:text="0.00"
+
+            android:textColor="@android:color/black"
+            android:id="@+id/amount_saved_text"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_margin="3dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView android:text="Gallons Saved: "
+            android:id="@+id/gallons_saved_label"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"/>
+        <TextView android:text="0.0"
+            android:id="@+id/gallons_saved_text"
+            android:textColor="@android:color/black"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="match_parent"/>
+    </LinearLayout>
+
 
     <fragment
-        android:layout_below="@id/gallons_saved_text"
-        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="360dp"
         android:id="@+id/route_map"
         class="com.google.android.gms.maps.SupportMapFragment"/>
 
     <Button
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Delete Trip"
         android:layout_below="@id/route_map"
         android:id="@+id/trip_details_delete_trip_button"/>
 
-</RelativeLayout>
+</LinearLayout>
